--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "STEEM PH Manila Curator",
-  "description": "Tool for @steemph.manila's curators",
-  "repository": "https://github.com/eastmaels/steemph-manila-curator.git",
+  "name": "STEEM PH Curator",
+  "description": "Tool for @steemph curators",
+  "repository": "https://github.com/eastmaels/steemph-uae-curator.git",
   "addons": []
 }
